--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <li>
                         <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i>
                         </span>
-                        <a href="#"><span class="text"> Metro Gali, Ratu Road, Ranchi</span></a>
+                        <a href="#"><span class="text"> Metro Gali, Ratu Road, Ranchi , Jharkhand</span></a>
                     </li>
                 </ul>
             </div>
