--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
                 <ul>
                     <li>
                         <span class="icon"><i class="fa fa-phone" aria-hidden="true"></i></span>
-                        <a href="#"><span class="text">+91 7870777718</span></a>
+                        <a href="tel:7870777718"><span class="text">+91 7870777718</span></a>
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-envelope-o" aria-hidden="true"></i></span>
-                        <a href="#"><span class="text">akshatkumar2u@gmail.com</span></a>
+                        <a href="https://www.gmail.com"><span class="text">akshatkumar2u@gmail.com</span></a>
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-linkedin-square" aria-hidden="true"></i>
