--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="img/img.JPG" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="shortcut icon" href="favicon.ico.jpg" type="image/x-icon">
-    <title>Akshat Kuamar</title>
+    <title>Akshat Kumar</title>
 </head>
 <body>
     <div class="container">
