--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
                     <li>
                         <span class="icon"><i class="fa fa-linkedin-square" aria-hidden="true"></i>
                         </span>
-                        <a href="#"><span class="text">www.linkedin.com</span></a>
+                        <a href="#"><span class="text">linkedin</span></a>
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i>
                         </span>
-                        <a href="#"><span class="text"> Metro Gali, Ratu Road, Ranchi , Jharkhand</span></a>
+                        <a href="#"><span class="text">Metro Gali, Ratu Road, Ranchi, Jharkhand</span></a>
                     </li>
                 </ul>
             </div>
