--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-envelope-o" aria-hidden="true"></i></span>
-                        <a href="https://www.gmail.com" target="_blank"></a>><span class="text">akshatkumar2u@gmail.com</span></a>
+                        <a href="https://www.gmail.com" target="_blank"></a><span class="text">akshatkumar2u@gmail.com</span></a>
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-linkedin-square" aria-hidden="true"></i>
                         </span>
-                        <a href="http://linkedin.com/in/akshat-kumar-047484243" target="_blank"></a>><span class="text">linkedin</span></a>
+                        <a href="http://linkedin.com/in/akshat-kumar-047484243" target="_blank"></a><span class="text">linkedin</span></a>
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i>
