--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <li>
                         <span class="icon"><i class="fa fa-linkedin-square" aria-hidden="true"></i>
                         </span>
-                        <a href="http://linkedin.com/in/akshat-kumar-047484243"></a><span class="text">linkedin</span></a>
+                        <a href="http://linkedin.com/in/akshat-kumar-047484243"target="_blank"></a><span class="text">linkedin</span></a>
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i>
