--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-envelope-o" aria-hidden="true"></i></span>
-                        <a href="https://www.gmail.com"><span class="text">akshatkumar2u@gmail.com</span></a>
+                        <a href="https://www.gmail.com"><span class="text" target="_blank">akshatkumar2u@gmail.com</span></a>
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-linkedin-square" aria-hidden="true"></i>
