--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <li>
                         <span class="icon"><i class="fa fa-linkedin-square" aria-hidden="true"></i>
                         </span>
-                        <a href="https://www.linkedin.com/in/akshat-kumar-047484243/" target="_blank"><span class="text">linkedin</span></a>
+                        <a href="https://linkedin.com/in/akshat-kumar-047484243" target="_blank"><span class="text">linkedin</span></a>
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i>
