--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
                         </span>
                         <a href="https://linkedin.com/in/akshat-kumar-047484243" target="_blank"><span class="text">linkedin</span></a>
                     </li>
+                    <span class="icon"><i class="fa fa-info-circle" aria-hidden="true"></i></span> 
+                    <a href="#" target="_blank"> <span class="text">indeed</span></a>
                     <li>
                         <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i>
                         </span>
