--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <a href="https://linkedin.com/in/akshat-kumar-047484243" target="_blank"><span class="text">linkedin</span></a>
                     </li>
                     <li>
-                        <span class="icon"><i class="fa fa-linkedin-square" aria-hidden="true"></i>
+                        <span class="icon"><i class="fa fa-info-circle" aria-hidden="true"></i>
                         </span>
                         <a href="https://linkedin.com/in/akshat-kumar-047484243" target="_blank"><span class="text">linkedin</span></a>
                     </li>
