--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <li>
                         <span class="icon"><i class="fa fa-info-circle" aria-hidden="true"></i>
                         </span>
-                        <a href="https://linkedin.com/in/akshat-kumar-047484243" target="_blank"><span class="text">linkedin</span></a>
+                        <a href="https://linkedin.com/in/akshat-kumar-047484243" target="_blank"><span class="text">indeed</span></a>
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i>
