--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="shortcut icon" href="img/img.JPG" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="shortcut icon" href="favicon.ico.jpg" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+    <link rel="shortcut icon" href="./assets/img/favicon.ico.jpg" type="image/x-icon">
     <title>Akshat Kumar</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
         <div class="left_side">
             <div class="profileText">
                 <div class="imgBx">
-                    <img class="imgh" src="img.JPG" alt="img" width="190px">
+                    <img class="imgh" src="./assets/img/img.JPG" alt="img" width="190px">
                 </div>
                 <h2>Akshat Kumar<br><span>Web Developer</span></h2>
             </div>
