--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="left_side">
             <div class="profileText">
                 <div class="imgBx">
-                    <img class="imgh" src="./assets/img/ig.JPG" alt="img" width="190px">
+                    <img class="imgh" src="./assets/img/img.JPG" alt="img" width="190px">
                 </div>
                 <h2>Akshat Kumar<br><span>Web Developer</span></h2>
             </div>
