--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <div class="box">
                 <h4>ARRAY</h4>
                 <div class="percent">
-                    <div style="width: 70%;"></div>
+                    <div style="width: 70%;">70%</div>
                 </div>
             </div>
 
