--- a/index.html
+++ b/index.html
@@ -139,12 +139,12 @@
                 </div>
             </div>
 
-            <div class="box">
-                <h4>ARRAY</h4>
+            <!-- <div class="box">
+                <h4>FIGMA</h4>
                 <div class="percent">
-                    <div style="width: 70%;">70%</div>
+                    <div style="width: 70%;"></div>
                 </div>
-            </div>
+            </div> -->
 
             <div class="box">
                 <h4>PHP</h4>
